--- a/usb-eclear/Makefile
+++ b/usb-eclear/Makefile
@@ -1,3 +1,3 @@
 
 usb-eclear: usb-eclear.c
-	cc -o usb-eclear -I /home/jdolan/acces-git/AIOUSB/AIOUSB/lib/ usb-eclear.c -lusb-1.0
+	cc -g -gdwarf -o usb-eclear -I /home/jdolan/acces-git/AIOUSB/AIOUSB/lib/ -L /home/jdolan/acces-git/AIOUSB/AIOUSB/lib/ usb-eclear.c -lusb-1.0 -laiousb
