removed absolute path from Makefile. Made location settable

--- a/usb-eclear/Makefile
+++ b/usb-eclear/Makefile
@@ -1,3 +1,5 @@
 
+AIOUSB_LIB?=~/AIOUSB/AIOUSB/lib
+
 usb-eclear: usb-eclear.c
-	cc -g -gdwarf -o usb-eclear -I /home/jdolan/acces-git/AIOUSB/AIOUSB/lib/ -L /home/jdolan/acces-git/AIOUSB/AIOUSB/lib/ usb-eclear.c -lusb-1.0 -laiousb
+	cc -o usb-eclear -I $(AIOUSB_LIB) -L $(AIOUSB_LIB) usb-eclear.c -lusb-1.0 -laiousb
