--- a/aiousb-port/aiousb/CMakeLists.txt
+++ b/aiousb-port/aiousb/CMakeLists.txt
@@ -1,2 +1,2 @@
 include_directories(${AIOUSB_SOURCE_DIR}/include)
-add_library(aiousb STATIC aiousb.c adc-threads.c)
+add_library(aiousb STATIC aiousb.cpp adc-threads.cpp)
